# CUDA-Barnes-Hut-Algorithm

./: CMakeLists.txt  cuda.cu  glad.c  main.cpp
include/: Camera.h  Config.h  Globals.h  Octree.h  Octtree.h  Particle.h  ParticleGenerator.h  Renderer.h  Shader.h  stb_image.cpp
include/KHR/: Particle.h
include/glad/: glad.h
lib/: glfw3.lib
shaders/: Particle.frag  Particle.vex  Particle.vexOld
src/: Camera.cpp  Octree.cpp  Octtree.cpp  ParticleGenerator.cpp  Renderer.cpp
src/cuda/: cuda.cuh
